remove stray slash

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Breaking Videogames
 <ul>
     {% for post in site.posts %}
       <li>
-        <a href="/breaking-videogames/{{ post.url }}">{{ post.title }}</a>
+        <a href="/breaking-videogames{{ post.url }}">{{ post.title }}</a>
       </li>
     {% endfor %}
   </ul>
