--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Breaking Videogames
 ---
 
+<a class="btn btn-rss" href="/feed.xml" target="_blank">RSS is not dead</a>
+
 <ul>
     {% for post in site.posts %}
       <li>
