Put RSS link and post links in <p> tags

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@ layout: default
 title: Breaking Videogames
 ---
 
-<a class="btn btn-rss" href="/breaking-videogames/feed.xml" target="_blank">RSS is not dead</a>
+<p><a class="btn btn-rss" href="/breaking-videogames/feed.xml" target="_blank">RSS is not dead</a><p>
 
+<p>
 <ul>
     {% for post in site.posts %}
       <li>
@@ -12,3 +13,4 @@ title: Breaking Videogames
       </li>
     {% endfor %}
   </ul>
+</p>
