--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Breaking Videogames
 ---
 
-<p><a class="btn btn-rss" href="/breaking-videogames/feed.xml" target="_blank">RSS is not dead</a><p>
+<p><img src="/breaking-videogames/assets/rss_48.png"></img><a class="btn btn-rss" href="/breaking-videogames/feed.xml" target="_blank">RSS is not dead</a><p>
 
 <p>
 <ul>
